--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "ebook_store",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "avalanche-css": "^1.3.0",
+    "normalize.css": "^8.0.0"
+  }
 }
